{
    "name": "InGamePlayerControls",
    "maps": [
        {
            "name": "Default",
            "id": "5a88c9a7-9f2c-4ca6-b814-924235e54238",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "PassThrough",
                    "id": "52858b46-21fb-4d0f-9709-26687a25a0b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "9d02c47d-48fa-48eb-96a2-de429c1daee1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuOpen",
                    "type": "Button",
                    "id": "54a2a11d-0736-4b1f-ad98-b1422b21b8b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b46d8e26-846b-4117-8014-dd5f9b59a512",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9281cb49-4bca-4815-8620-66c434180770",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed5e87e5-f2ef-4ba2-a63c-93a98278a71b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}